deploy/kustomize/base/aspnet-core-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-core-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet-core-app
  template:
    metadata:
      labels:
        app: aspnet-core-app
    spec:
      containers:
        - image: quay.io/kskels/aspnet-core-app:latest
          imagePullPolicy: Always
          name: aspnet-core-app
          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
