deploy/kustomize/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-core-redis
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet-core-redis
  template:
    metadata:
      labels:
        app: aspnet-core-redis
    spec:
      containers:
        - image: registry.redhat.io/rhel8/redis-6
          imagePullPolicy: Always
          name: aspnet-core-redis
          ports:
            - containerPort: 6379
              protocol: TCP
