deploy/kustomize/base/aspnet-core-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-core-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: aspnet-core-app
