deploy/kustomize/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-core-redis
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
    - name: 6379-tcp
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: aspnet-core-redis
