deploy/kustomize/base/aspnet-core-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aspnet-core-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: aspnet-core-app
    weight: 100
